# rust-atmega-1284p-blink

./: Cargo.toml  README.md  avr-atmega1284p.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs
