[package]
name = "blink-led-1284"
version = "0.1.0"
#edition = "2021"

#https://doc.rust-lang.org/stable/rust-by-example/cargo/deps.html
[dependencies]
panic-halt = "^0.2.0"    # Panic handler
panic-abort = "^0.3.2"
#rand = "^0.7.3"
#kp-lib-rs = { git = "https://github.com/Rahix/avr-hal.git", branch = "main"}

#https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
lto = true
#https://docs.rust-embedded.org/embedonomicon/smallest-no-std.html
#panic = "abort"

[profile.release]
lto = true
#panic = "abort"

#[dependencies.avr-hal-generic]
#version = ""
#git = "https://github.com/rahix/avr-hal"
#rev = "4170a773d4d76cc93433d2455ed8b14e573ebe70"
#features = ["trinket"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#About JTAG:
#https://stackoverflow.com/questions/5412727/avrisp-mkii-doesnt-work-with-avrdude-on-linux
#https://askubuntu.com/questions/977548/problem-in-connecting-to-atmel-corp-avr-isp-mkii-and-ft232-usb-serial-uart-ic
#https://steve.kargs.net/bacnet/avr-isp-mkii-on-ubuntu-hardy/
#https://manpages.ubuntu.com/manpages/bionic/man1/avarice.1.html
#https://crates.io/crates/ravedude
#https://blog.mbedded.ninja/programming/languages/rust/running-rust-on-microcontrollers/#atmel-avr
#https://habr.com/ru/post/686168/


